# GLBtoFloorplan

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: auth.rs  config.rs  error.rs  main.rs  models.rs  routes.rs  storage.rs
backend/src/processing/: geometry.rs  gltf_import.rs  mod.rs  render.rs
docs/: deployment.md
frontend/: .env.production  index.html  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts  vite-env.d.ts
scripts/: check-openpt-auth.sh
