[package]
name = "glb-floorplan-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures-util = "0.3"
gltf = "1.4"
hex = "0.4"
mime_guess = "2.0"
nalgebra = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
